# offboard_ladder

./: .gitmodules  simulate.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aruco_tracker/share/aruco_tracker/: package.sh
install/aruco_tracker/share/aruco_tracker/launch/: downward_camera_aruco.launch.py  moving_aruco.launch.py
install/cv_bridge/share/cv_bridge/: package.sh
install/image_geometry/share/image_geometry/: package.sh
install/opencv_tests/lib/opencv_tests/: broadcast  rosfacedetect  source
install/opencv_tests/share/opencv_tests/: package.sh
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_offboard/lib/px4_offboard/: circle_offboard  codex_test  control  offboard_figure8  offboard_figure8_node  offboard_ship_land  offboard_ship_land_sim  offboard_test  velocity_control
install/px4_offboard/share/px4_offboard/: package.sh  package.xml  velocity_control.launch.py
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh
install/vision_opencv/share/vision_opencv/: package.sh
log/: latest_build
src/aruco_tracker/launch/: front_camera_aruco.launch.py  mono_cam.launch.py  v1_16_tracker.launch.py
src/px4_offboard/: setup.cfg  setup.py
src/px4_offboard/px4_offboard/: codex_test.py  control.py  land_test.py  offboard_figure8_node.py  offboard_ship_land.py  offboard_ship_land_sim.py  velocity_control.py
(+2 files in other folders)
